# regex

./: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  nomsvc  pkgid.m4  project.config  regex.def
lib/: Makefile.am  Makefile.in  btowc.c  config.charset  localcharset.c  mbrtowc.c  mbsinit.c  streq.h  wcrtomb.c  wctype.in.h
local/m4/: regex.m4.diff
m4/: gnulib-cache.m4  gnulib-comp.m4  regex.m4
tests/: Makefile.am  Makefile.in
